[fix]Overflow nas reviews

--- a/src/App/Pages/Shop/ShopReviews/styles.scss
+++ b/src/App/Pages/Shop/ShopReviews/styles.scss
@@ -35,7 +35,7 @@
                 border-radius: 10px;
                 margin: 20px;
                 padding: 15px;
-                height: 84px;
+                height: fit-content;
             }
 
 
